[package]
name = "dopecomp_euler"
version = "0.1.0"
edition = "2021"
authors = ["Matei Tinca <tinca.matei02@gmail.com>"]

keywords = ["competitive", "algorithms"]
readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tincaMatei/competitive-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dopecomp_graph = { path = "../dopecomp_graph", version = "0.1.0" }
