[package]
name = "dopecomp_io"
version = "0.1.0"
edition = "2021"
authors = ["Matei Tinca <tinca.matei02@gmail.com>"]

keywords = ["competitive", "algorithms"]
readme = "../README.md"
repository = "https://github.com/tincaMatei/competitive-rust"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
